// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xml generator for touch ui aem dialogs should print a template for a extended version of TouchUIXMLGenerator 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<jcr:root
    xmlns:sling=\\"http://sling.apache.org/jcr/sling/1.0\\"
    xmlns:cq=\\"http://www.day.com/jcr/cq/1.0\\"
    xmlns:jcr=\\"http://www.jcp.org/jcr/1.0\\"
    xmlns:nt=\\"http://www.jcp.org/jcr/nt/1.0\\"
    xmlns:granite=\\"http://www.adobe.com/jcr/granite/1.0\\"
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"cq/gui/components/authoring/dialog\\"
    jcr:title=\\"extended\\">
    <content
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/container\\">
        <layout
            jcr:primaryType=\\"nt:unstructured\\"
            sling:resourceType=\\"granite/ui/components/foundation/layouts/tabs\\"
            type=\\"nav\\" />
        <items jcr:primaryType=\\"nt:unstructured\\">
            <tab_0
    jcr:primaryType=\\"nt:unstructured\\"
    jcr:title=\\"Mein viertes Tab\\"
    sling:resourceType=\\"granite/ui/components/foundation/section\\">
    <layout
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/layouts/fixedcolumns\\" />
    <items jcr:primaryType=\\"nt:unstructured\\">
        <column
            jcr:primaryType=\\"nt:unstructured\\"
            sling:resourceType=\\"granite/ui/components/foundation/container\\">
            <items jcr:primaryType=\\"nt:unstructured\\">
                <element_0
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/multifield\\"
    composite=\\"{Boolean}true\\"
    fieldLabel=\\"Nested Multifield with JSON storage\\">
    <field
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/fieldset\\"
        name=\\"./multi\\" fieldLabel=\\"Nested Multifield with JSON storage\\"     acs-commons-nested=\\"JSON_STORE\\" >
        <items jcr:primaryType=\\"nt:unstructured\\">
            <column
                jcr:primaryType=\\"nt:unstructured\\"
                sling:resourceType=\\"granite/ui/components/coral/foundation/container\\">
                <items jcr:primaryType=\\"nt:unstructured\\">
                     <element_0
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/select\\"
    name=\\"./dropdown\\" fieldLabel=\\"Mein Dropdown\\"   fieldDescription=\\"Meine Beschreibung für Dropdown\\"   >
    <items jcr:primaryType=\\"nt:unstructured\\">
        <option_0 jcr:primaryType=\\"nt:unstructured\\"  value=\\"1\\" text=\\"Name 1\\"/><option_1 jcr:primaryType=\\"nt:unstructured\\"  value=\\"2\\" text=\\"Name 2\\"/><option_2 jcr:primaryType=\\"nt:unstructured\\" selected=\\"true\\" value=\\"3\\" text=\\"Name 3\\"/>
    </items>
</element_0>
                </items>
            </column>
        </items>
    </field>
</element_0>
            </items>
        </column>
    </items>
</tab_0>
        </items>
    </content>
</jcr:root>"
`;

exports[`xml generator for touch ui aem dialogs should print a template for a external react app 1`] = `"./src/templates/reactExternal.template.html"`;

exports[`xml generator for touch ui aem dialogs should print the analytics file 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<jcr:root
  xmlns:cq=\\"http://www.day.com/jcr/cq/1.0\\"
  xmlns:jcr=\\"http://www.jcp.org/jcr/1.0\\"
  xmlns:nt=\\"http://www.jcp.org/jcr/nt/1.0\\"
  cq:trackevents=\\"event1,event2\\"
  cq:trackvars=\\"value1,value2\\"
  cq:componentName=\\"MyTestComponent\\"
  cq:componentGroup=\\"MyTestGroup\\"
  jcr:primaryType=\\"nt:unstructured\\" />"
`;

exports[`xml generator for touch ui aem dialogs should print the clientlibs content xml 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<jcr:root
  xmlns:cq=\\"http://www.day.com/jcr/cq/1.0\\"
  xmlns:jcr=\\"http://www.jcp.org/jcr/1.0\\"
  jcr:primaryType=\\"cq:ClientLibraryFolder\\"
  categories=\\"[cq.authoring.dialog]\\" />"
`;

exports[`xml generator for touch ui aem dialogs should print the component config file 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<jcr:root
  xmlns:sling=\\"http://sling.apache.org/jcr/sling/1.0\\"
  xmlns:cq=\\"http://www.day.com/jcr/cq/1.0\\"
  xmlns:jcr=\\"http://www.jcp.org/jcr/1.0\\"
  jcr:description=\\"MyTestComponentDescription\\"
  jcr:primaryType=\\"cq:Component\\"
  cq:noDecoration=\\"{Boolean}false\\"
  cq:isContainer=\\"false\\"
  jcr:title=\\"MyTestComponent\\"
  componentGroup=\\"MyTestGroup\\"
  sling:resourceSuperType=\\"core/wcm/components/text/v2/text\\" />"
`;

exports[`xml generator for touch ui aem dialogs should print the cq config file 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<jcr:root
        xmlns:cq=\\"http://www.day.com/jcr/cq/1.0\\"
        xmlns:jcr=\\"http://www.jcp.org/jcr/1.0\\"
        jcr:primaryType=\\"cq:EditConfig\\">
        <cq:listeners jcr:primaryType=\\"cq:EditListenersConfig\\" />
</jcr:root>"
`;

exports[`xml generator for touch ui aem dialogs should print the cq design dialog file 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<jcr:root
    xmlns:sling=\\"http://sling.apache.org/jcr/sling/1.0\\"
    xmlns:jcr=\\"http://www.jcp.org/jcr/1.0\\"
    xmlns:nt=\\"http://www.jcp.org/jcr/nt/1.0\\"
    xmlns:cq=\\"http://www.day.com/jcr/cq/1.0\\"
    xmlns:granite=\\"http://www.adobe.com/jcr/granite/1.0\\"
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"cq/gui/components/authoring/dialog\\">
    <content
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/coral/foundation/container\\">
        <items jcr:primaryType=\\"nt:unstructured\\">
            <tabs
                jcr:primaryType=\\"nt:unstructured\\"
                sling:resourceType=\\"granite/ui/components/coral/foundation/tabs\\"
                maximized=\\"{Boolean}true\\">
                <items jcr:primaryType=\\"nt:unstructured\\">
                    <styletab
                        jcr:primaryType=\\"nt:unstructured\\"
                        sling:resourceType=\\"granite/ui/components/coral/foundation/include\\"
                        path=\\"/mnt/overlay/cq/gui/components/authoring/dialog/style/tab_design/styletab\\" />
                </items>
            </tabs>
        </items>
    </content>
</jcr:root>"
`;

exports[`xml generator for touch ui aem dialogs should print the html-tag file 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<jcr:root
  xmlns:cq=\\"http://www.day.com/jcr/cq/1.0\\"
  xmlns:jcr=\\"http://www.jcp.org/jcr/1.0\\"
  xmlns:nt=\\"http://www.jcp.org/jcr/nt/1.0\\"
  cq:tagName=\\"div\\"
  jcr:primaryType=\\"nt:unstructured\\"
  class=\\"sample-style\\" />"
`;

exports[`xml generator for touch ui aem dialogs should print the new par file 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<jcr:root
    xmlns:sling=\\"http://sling.apache.org/jcr/sling/1.0\\"
    xmlns:cq=\\"http://www.day.com/jcr/cq/1.0\\"
    xmlns:jcr=\\"http://www.jcp.org/jcr/1.0\\"
    jcr:primaryType=\\"cq:Component\\"
    jcr:title=\\"New Component\\"
    sling:resourceSuperType=\\"wcm/foundation/components/parsys/newpar\\"
    componentGroup=\\".hidden\\" />"
`;

exports[`xml generator for touch ui aem dialogs should print the react template file 1`] = `"./src/templates/react.template.html"`;

exports[`xml generator for touch ui aem dialogs should print the touchUI dialog 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<jcr:root
    xmlns:sling=\\"http://sling.apache.org/jcr/sling/1.0\\"
    xmlns:cq=\\"http://www.day.com/jcr/cq/1.0\\"
    xmlns:jcr=\\"http://www.jcp.org/jcr/1.0\\"
    xmlns:nt=\\"http://www.jcp.org/jcr/nt/1.0\\"
    xmlns:granite=\\"http://www.adobe.com/jcr/granite/1.0\\"
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"cq/gui/components/authoring/dialog\\"
    jcr:title=\\"MyTestComponent\\">
    <content
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/container\\">
        <layout
            jcr:primaryType=\\"nt:unstructured\\"
            sling:resourceType=\\"granite/ui/components/foundation/layouts/tabs\\"
            type=\\"nav\\" />
        <items jcr:primaryType=\\"nt:unstructured\\">
            <tab_0
    jcr:primaryType=\\"nt:unstructured\\"
    jcr:title=\\"Mein erstes Tab\\"
    sling:resourceType=\\"granite/ui/components/foundation/section\\">
    <layout
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/layouts/fixedcolumns\\" />
    <items jcr:primaryType=\\"nt:unstructured\\">
        <column
            jcr:primaryType=\\"nt:unstructured\\"
            sling:resourceType=\\"granite/ui/components/foundation/container\\">
            <items jcr:primaryType=\\"nt:unstructured\\">
                <element_0
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/textfield\\"
        name=\\"./label\\" fieldLabel=\\"Mein Textfeld\\"  required=\\"{Boolean}true\\"   fieldDescription=\\"Meine Beschreibung für Textfeld...\\"   
         /><element_1
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/multifield\\"
    composite=\\"{Boolean}true\\"
    fieldLabel=\\"Mein Nested Multifield\\">
    <field
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/coral/foundation/container\\"
        name=\\"./multifieldNested\\" fieldLabel=\\"Mein Nested Multifield\\"   fieldDescription=\\"Meine Beschreibung für Multifield Nested...\\"   >
        <items jcr:primaryType=\\"nt:unstructured\\">
            <column
                jcr:primaryType=\\"nt:unstructured\\"
                sling:resourceType=\\"granite/ui/components/coral/foundation/container\\">
                <items jcr:primaryType=\\"nt:unstructured\\">
                     <element_0
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/textfield\\"
        name=\\"./label\\" fieldLabel=\\"Mein Textfield\\"    granite:class=\\"nested-custom-class\\" 
         />
                </items>
            </column>
        </items>
    </field>
</element_1><element_2
        jcr:primaryType=\\"nt:unstructured\\"
        name=\\"./path\\" fieldLabel=\\"Mein PathField\\"   fieldDescription=\\"Meine Beschreibung für PathField...\\"   
        sling:resourceType=\\"granite/ui/components/coral/foundation/form/pathfield\\" /><element_3
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/checkbox\\"
    name=\\"./select\\"
    text=\\"Mein Selectfeld\\"
    checked=\\"true\\"
    
     fieldDescription=\\"Meine Beschreibung für Select...\\"
    
    uncheckedValue=\\"false\\"
    {{CLASSNAME}}
    value=\\"true\\" /><element_4
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/numberfield\\"
        name=\\"./numbwr\\" fieldLabel=\\"Mein Numberfield\\"   fieldDescription=\\"Meine Beschreibung für Numberfield...\\"   
         max=\\"50\\" 
         min=\\"20\\"  /><element_5
  fieldLabel=\\"Mein Imagefield\\"
   required=\\"{Boolean}true\\" 
  fileReferenceParameter=\\"./image\\"
  name=\\"./srcField\\"
  sling:resourceType=\\"cq/gui/components/authoring/dialog/fileupload\\"
  mimeTypes=\\"[image]\\"
  allowUpload=\\"{Boolean}false\\"
  autoStart=\\"{Boolean}false\\"
  class=\\"cq-droptarget\\"
  fileNameParameter=\\"./fileName\\"
  jcr:primaryType=\\"nt:unstructured\\"
  multiple=\\"{Boolean}false\\"
  uploadUrl=\\"\${suffix.path}\\"
  useHTML5=\\"{Boolean}true\\"
   /><element_6
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/select\\"
    name=\\"./dropdown\\" fieldLabel=\\"Mein Dropdown\\"   fieldDescription=\\"Meine Beschreibung für Dropdown mit OnChange und OnLoad\\"   >
    <items jcr:primaryType=\\"nt:unstructured\\">
        <option_0 jcr:primaryType=\\"nt:unstructured\\"  value=\\"1\\" text=\\"Name 1\\"/><option_1 jcr:primaryType=\\"nt:unstructured\\"  value=\\"2\\" text=\\"Name 2\\"/><option_2 jcr:primaryType=\\"nt:unstructured\\" selected=\\"true\\" value=\\"3\\" text=\\"Name 3\\"/>
    </items>
</element_6><element_7
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/select\\"
    name=\\"./dropdown\\" fieldLabel=\\"Mein Dropdown mit DataSource\\"   fieldDescription=\\"Meine Beschreibung für Dropdown\\"  granite:class=\\"testClass\\" >
        <datasource jcr:primaryType=\\"nt:unstructured\\"
              sling:resourceType=\\"path/to/java/servlet\\"
              mode=\\"placeholderOne\\" mode1=\\"placeholderTwo\\"  />
</element_7><element_8
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/select\\"
    name=\\"./dropdown\\" fieldLabel=\\"My Dropdown with only dataSource path \\"   fieldDescription=\\"Meine Beschreibung für Dropdown\\"   >
        <datasource jcr:primaryType=\\"nt:unstructured\\"
              sling:resourceType=\\"path/to/java/servlet\\"
               />
</element_8><element_9
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/textarea\\"
        name=\\"./label\\" fieldLabel=\\"Meine Textarea\\"   fieldDescription=\\"Meine Beschreibung für Textarea...\\"   
         maxlength=\\"50\\"  /><element_10
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"cq/gui/components/authoring/dialog/richtext\\"
        name=\\"./richtext\\" fieldLabel=\\"Mein Richtexteld\\"   fieldDescription=\\"Meine Beschreibung für Richtext...\\"   
        
        useFixedInlineToolbar=\\"{Boolean}true\\">
        <rtePlugins jcr:primaryType=\\"nt:unstructured\\">
                <edit
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <findreplace
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <spellcheck
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <image
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <keys
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <styles
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <subsuperscript
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <undo
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <format
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <justify
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <links
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <lists
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <misctools
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\">
                        <specialCharsConfig jcr:primaryType=\\"nt:unstructured\\">
                                <chars jcr:primaryType=\\"nt:unstructured\\">
                                        <default_copyright
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                entity=\\"&amp;copy;\\"
                                                name=\\"copyright\\" />
                                        <default_euro
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                entity=\\"&amp;euro;\\"
                                                name=\\"euro\\" />
                                        <default_registered
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                entity=\\"&amp;reg;\\"
                                                name=\\"registered\\" />
                                        <default_trademark
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                entity=\\"&amp;trade;\\"
                                                name=\\"trademark\\" />
                                </chars>
                        </specialCharsConfig>
                </misctools>
                <paraformat
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\">
                        <formats jcr:primaryType=\\"nt:unstructured\\">
                                <default_p
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Paragraph\\"
                                        tag=\\"p\\" />
                                <default_h1
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 1\\"
                                        tag=\\"h1\\" />
                                <default_h2
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 2\\"
                                        tag=\\"h2\\" />
                                <default_h3
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 3\\"
                                        tag=\\"h3\\" />
                                <default_h4
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 4\\"
                                        tag=\\"h4\\" />
                                <default_h5
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 5\\"
                                        tag=\\"h5\\" />
                                <default_h6
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 6\\"
                                        tag=\\"h6\\" />
                                <default_blockquote
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Quote\\"
                                        tag=\\"blockquote\\" />
                                <default_pre
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Preformatted\\"
                                        tag=\\"pre\\" />
                                <default_hr
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Horizontal Rule (visual line break)\\"
                                        tag=\\"hr\\" />
                                <default_small
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Small\\"
                                        tag=\\"div\\" />
                        </formats>
                </paraformat>
                <table
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\">
                        <hiddenHeaderConfig
                                jcr:primaryType=\\"nt:unstructured\\"
                                hiddenHeaderClassName=\\"cq-wcm-foundation-aria-visuallyhidden\\"
                                hiddenHeaderEditingCSS=\\"cq-RichText-hiddenHeader--editing\\" />
                </table>
                <tracklinks
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
        </rtePlugins>
        <uiSettings jcr:primaryType=\\"nt:unstructured\\">
                <cui jcr:primaryType=\\"nt:unstructured\\">
                        <inline
                                jcr:primaryType=\\"nt:unstructured\\"
                                toolbar=\\"[format#bold,format#italic,format#underline,#justify,#lists,links#modifylink,links#unlink,#paraformat]\\">
                                <popovers jcr:primaryType=\\"nt:unstructured\\">
                                        <justify
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                items=\\"[justify#justifyleft,justify#justifycenter,justify#justifyright]\\"
                                                ref=\\"justify\\" />
                                        <lists
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                items=\\"[lists#unordered,lists#ordered,lists#outdent,lists#indent]\\"
                                                ref=\\"lists\\" />
                                        <paraformat
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                items=\\"paraformat:getFormats:paraformat-pulldown\\"
                                                ref=\\"paraformat\\" />
                                </popovers>
                        </inline>
                        <dialogFullScreen
                                jcr:primaryType=\\"nt:unstructured\\"
                                toolbar=\\"[format#bold,format#italic,format#underline,subsuperscript#subscript,subsuperscript#superscript,misctools#specialchars,misctools#sourceedit,justify#justifyleft,justify#justifycenter,justify#justifyright,lists#unordered,lists#ordered,lists#outdent,lists#indent,links#modifylink,links#unlink,links#anchor,undo#undo,undo#redo,table#createoredit,#paraformat,findreplace#find,findreplace#replace,image#imageProps,spellcheck#checktext,edit#cut,edit#copy,edit#paste-default,edit#paste-plaintext,edit#paste-wordhtml]\\">
                                <popovers jcr:primaryType=\\"nt:unstructured\\">
                                        <paraformat
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                items=\\"paraformat:getFormats:paraformat-pulldown\\"
                                                ref=\\"paraformat\\" />
                                </popovers>
                        </dialogFullScreen>
                        <tableEditOptions
                                jcr:primaryType=\\"nt:unstructured\\"
                                toolbar=\\"[table#insertcolumn-before,table#insertcolumn-after,table#removecolumn,-,table#insertrow-before,table#insertrow-after,table#removerow,-,table#mergecells-right,table#mergecells-down,table#mergecells,table#splitcell-horizontal,table#splitcell-vertical,-,table#selectrow,table#selectcolumn,-,table#ensureparagraph,-,table#modifytableandcell,table#removetable,-,undo#undo,undo#redo,-,table#exitTableEditing,-]\\" />
                </cui>
        </uiSettings>
</element_10><element_11
    jcr:primaryType=\\"nt:unstructured\\"
    onClick=\\"alert(123)\\"
    text=\\"Mein Button\\"
    selectionMode=\\"single\\"
    
    sling:resourceType=\\"granite/ui/components/foundation/button\\" /><element_12
  jcr:primaryType=\\"nt:unstructured\\"
  name=\\"./datePicker\\" fieldLabel=\\"Mein DatePicker\\"     
  sling:resourceType=\\"granite/ui/components/coral/foundation/form/datepicker\\"
  minDate=\\"yesterday\\"
  displayedFormat=\\"YYYY-MM-DD HH:mm\\"
  type=\\"datetime\\" /><element_13
  jcr:primaryType=\\"nt:unstructured\\"
  sling:resourceType=\\"granite/ui/components/coral/foundation/heading\\"
  level=\\"2\\"
  text=\\"Lorem Ipsum...\\" /><element_14
    jcr:primaryType=\\"nt:unstructured\\"
    jcr:title=\\"My Text\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/fieldset\\">
    <items jcr:primaryType=\\"nt:unstructured\\">
        <element_0
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/textarea\\"
        name=\\"./option1\\" fieldLabel=\\"Meine Textarea\\"   fieldDescription=\\"Meine Beschreibung für Textarea...\\"   
         maxlength=\\"50\\"  /><element_1
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/textfield\\"
        name=\\"./option2\\" fieldLabel=\\"Meine Text\\"     
         />
    </items>
</element_14><element_15
      jcr:primaryType=\\"nt:unstructured\\"
      sling:resourceType=\\"granite/ui/components/coral/foundation/form/radiogroup\\"
      deleteHint=\\"{Boolean}false\\"
      name=\\"./radioGr\\" fieldLabel=\\"My Text\\"     
      vertical=\\"{Boolean}true\\">
      <items jcr:primaryType=\\"nt:unstructured\\"><radio_0 jcr:primaryType=\\"nt:unstructured\\" text=\\"My text 1\\" value=\\"my-val-1\\" /><radio_1 jcr:primaryType=\\"nt:unstructured\\" text=\\"My text 2\\" value=\\"my-val-2\\" /><radio_2 jcr:primaryType=\\"nt:unstructured\\" text=\\"My text 3\\" value=\\"my-val-3\\" /></items>
</element_15>
            </items>
        </column>
    </items>
</tab_0><tab_1
    jcr:primaryType=\\"nt:unstructured\\"
    jcr:title=\\"Mein zweites Tab\\"
    sling:resourceType=\\"granite/ui/components/foundation/section\\">
    <layout
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/layouts/fixedcolumns\\" />
    <items jcr:primaryType=\\"nt:unstructured\\">
        <column
            jcr:primaryType=\\"nt:unstructured\\"
            sling:resourceType=\\"granite/ui/components/foundation/container\\">
            <items jcr:primaryType=\\"nt:unstructured\\">
                <element_0
    granite:class=\\"\\"
    jcr:primaryType=\\"nt:unstructured\\"
    fieldLabel=\\"Mein Touch UI Multifield\\"
     fieldDescription=\\"Meine Beschreibung für das Multifield...\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/multifield\\">
    <field
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/coral/foundation/form/textfield\\"
        name=\\"./multitouchuidatabase\\"
         />
</element_0>
            </items>
        </column>
    </items>
</tab_1><tab_2
    jcr:primaryType=\\"nt:unstructured\\"
    jcr:title=\\"Mein drittes Tab\\"
    sling:resourceType=\\"granite/ui/components/foundation/section\\">
    <layout
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/layouts/fixedcolumns\\" />
    <items jcr:primaryType=\\"nt:unstructured\\">
        <column
            jcr:primaryType=\\"nt:unstructured\\"
            sling:resourceType=\\"granite/ui/components/foundation/container\\">
            <items jcr:primaryType=\\"nt:unstructured\\">
                <element_0
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/multifield\\"
    composite=\\"{Boolean}true\\"
    fieldLabel=\\"Nested Multifield\\">
    <field
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/coral/foundation/container\\"
        name=\\"./multi\\" fieldLabel=\\"Nested Multifield\\"     >
        <items jcr:primaryType=\\"nt:unstructured\\">
            <column
                jcr:primaryType=\\"nt:unstructured\\"
                sling:resourceType=\\"granite/ui/components/coral/foundation/container\\">
                <items jcr:primaryType=\\"nt:unstructured\\">
                     <element_0
  fieldLabel=\\"Mein Imagefield\\"
   required=\\"{Boolean}true\\" 
  fileReferenceParameter=\\"./image\\"
  name=\\"./srcField\\"
  sling:resourceType=\\"cq/gui/components/authoring/dialog/fileupload\\"
  mimeTypes=\\"[image]\\"
  allowUpload=\\"{Boolean}false\\"
  autoStart=\\"{Boolean}false\\"
  class=\\"cq-droptarget\\"
  fileNameParameter=\\"./fileName\\"
  jcr:primaryType=\\"nt:unstructured\\"
  multiple=\\"{Boolean}false\\"
  uploadUrl=\\"\${suffix.path}\\"
  useHTML5=\\"{Boolean}true\\"
   /><element_1
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/select\\"
    name=\\"./dropdown\\" fieldLabel=\\"Mein Dropdown\\"   fieldDescription=\\"Meine Beschreibung für Dropdown mit OnChange und OnLoad\\"   >
    <items jcr:primaryType=\\"nt:unstructured\\">
        <option_0 jcr:primaryType=\\"nt:unstructured\\"  value=\\"1\\" text=\\"Name 1\\"/><option_1 jcr:primaryType=\\"nt:unstructured\\"  value=\\"2\\" text=\\"Name 2\\"/><option_2 jcr:primaryType=\\"nt:unstructured\\" selected=\\"true\\" value=\\"3\\" text=\\"Name 3\\"/>
    </items>
</element_1><element_2
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/select\\"
    name=\\"./dropdown\\" fieldLabel=\\"Mein Dropdown mit DataSource\\"   fieldDescription=\\"Meine Beschreibung für Dropdown\\"  granite:class=\\"testClass\\" >
        <datasource jcr:primaryType=\\"nt:unstructured\\"
              sling:resourceType=\\"path/to/java/servlet\\"
              mode=\\"placeholderOne\\" mode1=\\"placeholderTwo\\"  />
</element_2><element_3
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/select\\"
    name=\\"./dropdown\\" fieldLabel=\\"My Dropdown with only dataSource path \\"   fieldDescription=\\"Meine Beschreibung für Dropdown\\"   >
        <datasource jcr:primaryType=\\"nt:unstructured\\"
              sling:resourceType=\\"path/to/java/servlet\\"
               />
</element_3><element_4
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/textarea\\"
        name=\\"./label\\" fieldLabel=\\"Meine Textarea\\"   fieldDescription=\\"Meine Beschreibung für Textarea...\\"   
         maxlength=\\"50\\"  /><element_5
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"cq/gui/components/authoring/dialog/richtext\\"
        name=\\"./richtext\\" fieldLabel=\\"Mein Richtexteld\\"   fieldDescription=\\"Meine Beschreibung für Richtext...\\"   
        
        useFixedInlineToolbar=\\"{Boolean}true\\">
        <rtePlugins jcr:primaryType=\\"nt:unstructured\\">
                <edit
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <findreplace
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <spellcheck
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <image
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <keys
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <styles
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <subsuperscript
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <undo
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <format
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <justify
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <links
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <lists
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
                <misctools
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\">
                        <specialCharsConfig jcr:primaryType=\\"nt:unstructured\\">
                                <chars jcr:primaryType=\\"nt:unstructured\\">
                                        <default_copyright
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                entity=\\"&amp;copy;\\"
                                                name=\\"copyright\\" />
                                        <default_euro
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                entity=\\"&amp;euro;\\"
                                                name=\\"euro\\" />
                                        <default_registered
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                entity=\\"&amp;reg;\\"
                                                name=\\"registered\\" />
                                        <default_trademark
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                entity=\\"&amp;trade;\\"
                                                name=\\"trademark\\" />
                                </chars>
                        </specialCharsConfig>
                </misctools>
                <paraformat
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\">
                        <formats jcr:primaryType=\\"nt:unstructured\\">
                                <default_p
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Paragraph\\"
                                        tag=\\"p\\" />
                                <default_h1
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 1\\"
                                        tag=\\"h1\\" />
                                <default_h2
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 2\\"
                                        tag=\\"h2\\" />
                                <default_h3
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 3\\"
                                        tag=\\"h3\\" />
                                <default_h4
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 4\\"
                                        tag=\\"h4\\" />
                                <default_h5
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 5\\"
                                        tag=\\"h5\\" />
                                <default_h6
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Heading 6\\"
                                        tag=\\"h6\\" />
                                <default_blockquote
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Quote\\"
                                        tag=\\"blockquote\\" />
                                <default_pre
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Preformatted\\"
                                        tag=\\"pre\\" />
                                <default_hr
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Horizontal Rule (visual line break)\\"
                                        tag=\\"hr\\" />
                                <default_small
                                        jcr:primaryType=\\"nt:unstructured\\"
                                        description=\\"Small\\"
                                        tag=\\"div\\" />
                        </formats>
                </paraformat>
                <table
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\">
                        <hiddenHeaderConfig
                                jcr:primaryType=\\"nt:unstructured\\"
                                hiddenHeaderClassName=\\"cq-wcm-foundation-aria-visuallyhidden\\"
                                hiddenHeaderEditingCSS=\\"cq-RichText-hiddenHeader--editing\\" />
                </table>
                <tracklinks
                        jcr:primaryType=\\"nt:unstructured\\"
                        features=\\"*\\" />
        </rtePlugins>
        <uiSettings jcr:primaryType=\\"nt:unstructured\\">
                <cui jcr:primaryType=\\"nt:unstructured\\">
                        <inline
                                jcr:primaryType=\\"nt:unstructured\\"
                                toolbar=\\"[format#bold,format#italic,format#underline,#justify,#lists,links#modifylink,links#unlink,#paraformat]\\">
                                <popovers jcr:primaryType=\\"nt:unstructured\\">
                                        <justify
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                items=\\"[justify#justifyleft,justify#justifycenter,justify#justifyright]\\"
                                                ref=\\"justify\\" />
                                        <lists
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                items=\\"[lists#unordered,lists#ordered,lists#outdent,lists#indent]\\"
                                                ref=\\"lists\\" />
                                        <paraformat
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                items=\\"paraformat:getFormats:paraformat-pulldown\\"
                                                ref=\\"paraformat\\" />
                                </popovers>
                        </inline>
                        <dialogFullScreen
                                jcr:primaryType=\\"nt:unstructured\\"
                                toolbar=\\"[format#bold,format#italic,format#underline,subsuperscript#subscript,subsuperscript#superscript,misctools#specialchars,misctools#sourceedit,justify#justifyleft,justify#justifycenter,justify#justifyright,lists#unordered,lists#ordered,lists#outdent,lists#indent,links#modifylink,links#unlink,links#anchor,undo#undo,undo#redo,table#createoredit,#paraformat,findreplace#find,findreplace#replace,image#imageProps,spellcheck#checktext,edit#cut,edit#copy,edit#paste-default,edit#paste-plaintext,edit#paste-wordhtml]\\">
                                <popovers jcr:primaryType=\\"nt:unstructured\\">
                                        <paraformat
                                                jcr:primaryType=\\"nt:unstructured\\"
                                                items=\\"paraformat:getFormats:paraformat-pulldown\\"
                                                ref=\\"paraformat\\" />
                                </popovers>
                        </dialogFullScreen>
                        <tableEditOptions
                                jcr:primaryType=\\"nt:unstructured\\"
                                toolbar=\\"[table#insertcolumn-before,table#insertcolumn-after,table#removecolumn,-,table#insertrow-before,table#insertrow-after,table#removerow,-,table#mergecells-right,table#mergecells-down,table#mergecells,table#splitcell-horizontal,table#splitcell-vertical,-,table#selectrow,table#selectcolumn,-,table#ensureparagraph,-,table#modifytableandcell,table#removetable,-,undo#undo,undo#redo,-,table#exitTableEditing,-]\\" />
                </cui>
        </uiSettings>
</element_5><element_6
    jcr:primaryType=\\"nt:unstructured\\"
    onClick=\\"alert(123)\\"
    text=\\"Mein Button\\"
    selectionMode=\\"single\\"
    
    sling:resourceType=\\"granite/ui/components/foundation/button\\" /><element_7
  jcr:primaryType=\\"nt:unstructured\\"
  name=\\"./datePicker\\" fieldLabel=\\"Mein DatePicker\\"     
  sling:resourceType=\\"granite/ui/components/coral/foundation/form/datepicker\\"
  minDate=\\"yesterday\\"
  displayedFormat=\\"YYYY-MM-DD HH:mm\\"
  type=\\"datetime\\" /><element_8
  jcr:primaryType=\\"nt:unstructured\\"
  sling:resourceType=\\"granite/ui/components/coral/foundation/heading\\"
  level=\\"2\\"
  text=\\"Lorem Ipsum...\\" /><element_9
    jcr:primaryType=\\"nt:unstructured\\"
    jcr:title=\\"My Text\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/fieldset\\">
    <items jcr:primaryType=\\"nt:unstructured\\">
        <element_0
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/textarea\\"
        name=\\"./option1\\" fieldLabel=\\"Meine Textarea\\"   fieldDescription=\\"Meine Beschreibung für Textarea...\\"   
         maxlength=\\"50\\"  /><element_1
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/form/textfield\\"
        name=\\"./option2\\" fieldLabel=\\"Meine Text\\"     
         />
    </items>
</element_9><element_10
      jcr:primaryType=\\"nt:unstructured\\"
      sling:resourceType=\\"granite/ui/components/coral/foundation/form/radiogroup\\"
      deleteHint=\\"{Boolean}false\\"
      name=\\"./radioGr\\" fieldLabel=\\"My Text\\"     
      vertical=\\"{Boolean}true\\">
      <items jcr:primaryType=\\"nt:unstructured\\"><radio_0 jcr:primaryType=\\"nt:unstructured\\" text=\\"My text 1\\" value=\\"my-val-1\\" /><radio_1 jcr:primaryType=\\"nt:unstructured\\" text=\\"My text 2\\" value=\\"my-val-2\\" /><radio_2 jcr:primaryType=\\"nt:unstructured\\" text=\\"My text 3\\" value=\\"my-val-3\\" /></items>
</element_10>
                </items>
            </column>
        </items>
    </field>
</element_0>
            </items>
        </column>
    </items>
</tab_2><tab_3
    jcr:primaryType=\\"nt:unstructured\\"
    jcr:title=\\"Mein viertes Tab\\"
    sling:resourceType=\\"granite/ui/components/foundation/section\\">
    <layout
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/foundation/layouts/fixedcolumns\\" />
    <items jcr:primaryType=\\"nt:unstructured\\">
        <column
            jcr:primaryType=\\"nt:unstructured\\"
            sling:resourceType=\\"granite/ui/components/foundation/container\\">
            <items jcr:primaryType=\\"nt:unstructured\\">
                <element_0
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/multifield\\"
    composite=\\"{Boolean}true\\"
    fieldLabel=\\"Nested Multifield with JSON storage\\">
    <field
        jcr:primaryType=\\"nt:unstructured\\"
        sling:resourceType=\\"granite/ui/components/coral/foundation/container\\"
        name=\\"./multi\\" fieldLabel=\\"Nested Multifield with JSON storage\\"     acs-commons-nested=\\"JSON_STORE\\" >
        <items jcr:primaryType=\\"nt:unstructured\\">
            <column
                jcr:primaryType=\\"nt:unstructured\\"
                sling:resourceType=\\"granite/ui/components/coral/foundation/container\\">
                <items jcr:primaryType=\\"nt:unstructured\\">
                     <element_0
    jcr:primaryType=\\"nt:unstructured\\"
    sling:resourceType=\\"granite/ui/components/coral/foundation/form/select\\"
    name=\\"./dropdown\\" fieldLabel=\\"Mein Dropdown\\"   fieldDescription=\\"Meine Beschreibung für Dropdown\\"   >
    <items jcr:primaryType=\\"nt:unstructured\\">
        <option_0 jcr:primaryType=\\"nt:unstructured\\"  value=\\"1\\" text=\\"Name 1\\"/><option_1 jcr:primaryType=\\"nt:unstructured\\"  value=\\"2\\" text=\\"Name 2\\"/><option_2 jcr:primaryType=\\"nt:unstructured\\" selected=\\"true\\" value=\\"3\\" text=\\"Name 3\\"/>
    </items>
</element_0>
                </items>
            </column>
        </items>
    </field>
</element_0><element_1
        jcr:primaryType=\\"nt:unstructured\\"
        name=\\"./pathBrowser\\" fieldLabel=\\"6.2 Pathbrowser\\"     
        sling:resourceType=\\"granite/ui/components/coral/foundation/form/pathbrowser\\" />
            </items>
        </column>
    </items>
</tab_3>
        </items>
    </content>
</jcr:root>"
`;
